chore: fix main field

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@sqrtthree/koa-token",
   "description": "A token middleware for Koa",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsc",
