--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsc --watch",
+    "prebuild": "npm run lint",
     "build": "tsc",
     "type-check": "tsc --noEmit",
-    "lint": "npm run type-check"
+    "lint": "npm run type-check",
+    "prepublishOnly": "npm run build"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sqrthree/koa-token.git"
