--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "tsc",
     "type-check": "tsc --noEmit",
     "lint": "npm run type-check",
+    "test": "ava",
+    "test:cov": "nyc ava",
     "prepublishOnly": "npm run build"
   },
   "publishConfig": {
@@ -33,9 +35,13 @@
     "lodash": "~4.17.21"
   },
   "devDependencies": {
+    "@sqrtthree/tsconfig": "~1.0.0",
     "@types/koa": "~2.13.4",
     "@types/lodash": "~4.14.171",
-    "typescript": "~4.3.5",
-    "@sqrtthree/tsconfig": "~1.0.0"
+    "ava": "~3.15.0",
+    "got": "~9.6.0",
+    "nyc": "~15.1.0",
+    "test-listen": "~1.1.0",
+    "typescript": "~4.3.5"
   }
 }
